# GrislyGrotto

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GG4.5.sln  GG4.sln  GG5.sln  GG6.sln  GrislyGrotto.5.0.ReSharper.user.orig  GrislyGrotto.csproj  GrislyGrotto.sln  GrislyGrotto.sln.orig  GrislyGrotto.suo.orig  UpgradeLog.XML  UpgradeLog.htm  Web.config  database.md  fly.toml  go.mod  go.sum  kestrel-grislygrotto.service  linux-setup.md  nginx.yaml  readme.md  setup.md  solution.disposechecksettings  tasks.md  updates.md
Blog/: Css.css  Xslt.xslt
Core/: Core.csproj  IUserService.cs
DAL.AzureTables/: AzurePostService.cs  AzureUserService.cs  DAL.AzureTables.csproj  Extensions.cs
DAL.SQLite/: ConnectionInfo.cs  DAL.SQLite.csproj  DataAccess.cs  PostService.cs  UserService.cs
DAL.XmlFiles/: DAL.XmlFiles.csproj  XmlPostService.cs  XmlUserService.cs
DataMigrator/: DataAccess.cs  DataMigrator.csproj  Program.cs
DataMigrator.SqlCeToSqlSvr/: App.config  Asset.cs  Comment.cs  DataMigrator.SqlCeToSqlSvr.csproj  GrislyGrottoAzureEntities.Context.cs  GrislyGrottoAzureEntities.Context.tt  GrislyGrottoAzureEntities.Designer.cs  GrislyGrottoAzureEntities.edmx  GrislyGrottoAzureEntities.edmx.diagram  GrislyGrottoAzureEntities.tt  Post.cs  Program.cs
DbConverter.GG12to13/: DbConverter.GG12to13.csproj  Program.cs  packages.config
Domain/: Domain.csproj  IPostService.cs  IUserService.cs
GG7.DataExtractor/: DataAccess.cs  GG7.DataExtractor.csproj  GG7.DataExtractor.sln  Program.cs
GrislyGrotto.Backup/: App.config  GrislyGrotto.Backup.csproj  Post.cs  Program.cs  packages.config
GrislyGrotto.Backup.GG10/: App.config  GrislyGrotto.Backup.GG10.csproj  Program.cs
GrislyGrotto.CommentsCleaner/: App.config  GrislyGrotto.CommentsCleaner.csproj  Program.cs
GrislyGrotto.DAL.LinqToSql/: GrislyGrotto.DAL.SQLServer.csproj  GrislyGrottoDB.dbml  GrislyGrottoDB.dbml.layout  GrislyGrottoDB.designer.cs  SQLServerCommentRepository.cs  SQLServerPostRepository.cs  SQLServerQuoteRepository.cs  SQLServerUserRepository.cs  app.config
GrislyGrotto.DAL.SQLDataServices/: GrislyGrotto.DAL.SQLDataServices.csproj  SDSCommentRepository.cs  SDSPostRepository.cs
GrislyGrotto.DAL.SQLite/: GrislyGrotto.DAL.SQLite.csproj  SQLiteDataAccess.cs  (+3 more)
(+693 files in other folders)
