[package]
name = "grisly_grotto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
comrak = "0.18.0"
serde = { version = "1.0.160", features = ["derive"] }
sqlite = "0.30.4"
tera = "1.18.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
