[package]
name = "grisly_grotto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
anyhow = "1.0.70"
argon2 = "0.5.0"
chrono = "0.4.24"
comrak = "0.18.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.17"
regex = "1.8.1"
rust-s3 = "0.33.0"
serde = { version = "1.0.160", features = ["derive"] }
sqlite = "0.30.4"
tera = "1.18.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tree_magic = "0.2.3"

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
