[package]
name = "grislygrotto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this is added so that when copying cargo.toml by itself, cargo vendor can be run
[[bin]]
name = "grislygrotto"
path = "src/main.rs"

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
anyhow = "1.0.70"
chrono = "0.4.24"
comrak = "0.18.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
infer = "0.15.0"
log = "0.4.17"
rand = "0.8.5"
regex = "1.8.1"
rust-argon2 = "1.0.0"
rust-s3 = "0.33.0"
serde = { version = "1.0.160", features = ["derive"] }
sqlite = "0.30.4"
syntect = "5.0.0"
tera = "1.18.1"
time = "0.3.21"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
